src/styles/global.css
:root {
    --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
    --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
    --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
    --step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
    --step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
    --step-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
    --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
    --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);

    --max-width: 900px;
    --col-width: 100%;
    --threshold: calc(var(--max-width) - 100px);

    --gap: clamp(1rem, 2.5vw, 2rem);
}

:root {
    color-scheme: light dark;

    /* Colors generated by https://colorffy.com/color-scheme-generator */
    /* Accessibility colors aided by https://www.learnui.design/tools/accessible-color-generator.html */

    --color-background: oklch(27.7% 0.046 192.524);
    --color-text-base: white;
    --color-text-muted: oklch(95.3% 0.051 180.801);
    --color-text-muted-black: black;
    --color-accent: #b26acd;
    --color-card: #333;
    --color-card-muted: #475f64;
    --color-border: #475f64;
    --color-button-primary: #a601fe;
    --color-button-primary-hover: #001217;
    --color-button-border: #b2bcbe;

    --color-list-video: #c12b05;
    --color-list-article: #f47d3c;
    --color-list-website: #a601fe;
    --color-list-book: #58aa9c;

    --color-link: #44F7D3;
    --color-link-dark: black;
    --color-link-bg: oklch(85.5% 0.138 181.071);

    /* Generated at https://colorffy.com/mesh-gradient-generator?colors=001217-002027-002E36-003C45-004954 */
    --background-gradient: linear-gradient(180deg,
            #171717,
            #313131 90%,
            #616161 100%);
}

html {
    font-family: "Open Sans Variable", sans-serif;
    font-weight: 400;
}

*,
:after,
:before {
    box-sizing: border-box;
}

main {
    width: 100%;
    max-width: var(--max-width);
    margin: 0 auto;
    padding: var(--gap) var(--gap) 4rem;
    flex: 1;
    font-size: var(--step-0);
    font-weight: 400;
}

a {
    background-size: 0%;
    background-image: linear-gradient(var(--color-link-bg) 0 0);
    background-repeat: no-repeat;
    color: cyan;
    text-decoration: none;
    transition: 0.4s;
    padding: 0 0.25em;
}

a:hover {
    color: var(--color-link-dark);
    background-size: 100%;
    text-decoration: underline;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 1rem;
}

ul li {
    display: inline;
}

